--- a/assignment_5/dogStyle.css
+++ b/assignment_5/dogStyle.css
@@ -1,5 +1,5 @@
 * {
-  background-color: rgba(236,243,255,1);
+  background-color: #ecf3ff;
   font-family: "Neue Haas Grotesk Display Pro";
 }
 
@@ -50,7 +50,7 @@ img {
 }
 .title {
   width: 249px;
-  color: rgba(8,49,96,1);
+  color: #083160;
   position: absolute;
   top: 8px;
   left: 50%;
@@ -205,7 +205,7 @@ hr.solid {
 
 .prodBtn {
   display: inline-block;
-  background-color: rgba(236,243,255,1);
+  background-color: #ecf3ff;
   border: 2px solid #000000;
   font-size: 16px;
   color: #000000;
