--- a/assignment_5/detailStyle.css
+++ b/assignment_5/detailStyle.css
@@ -7,7 +7,7 @@
     text-decoration: none;
   }
 
-  /* Basic Styling */
+  /* Basic styling */
 html, body {
   height: 100%;
   width: 100%;
@@ -22,7 +22,7 @@ html, body {
   display: flex;
 }
 
-  /*Nav Bar and Header*/
+  /* Nav bar and header */
   .nav {
     width: 100%;
     height: 83px;
@@ -33,6 +33,8 @@ html, body {
     overflow: hidden;
     z-index: 1;
   }
+
+  /* Image manip */
   img {
     object-fit: contain;
   }
@@ -123,7 +125,7 @@ html, body {
   }
   
   
-  /* Left Column */
+  /* Left column */
   .leftColumn img {
     width: 80%;
     height: auto;
@@ -131,16 +133,17 @@ html, body {
     left: 0;
     top: 0;
     opacity: 0;
-    /*transition: all 0.3s ease;*/
+    /*transition: all 0.3s ease;
+    For when I have other images implemented */
   }
-  /*I'll be adding in resposnive image swapping later*/
+  /*I'll be adding in resposnive image swapping later */
   .leftColumn img.active {
     opacity: 1;
   }
   
-  /* Right Column */
+  /* Right column */
   
-  /* Product Description */
+  /* Product description */
   .productDescription {
     border-bottom: 1px solid #E1E8EE;
     margin-bottom: 20px;
@@ -164,7 +167,7 @@ html, body {
     line-height: 1.5rem;
   }
   
-  /* Product Configuration */
+  /* Product configuration */
   .productColor span,
   .sizeConfig span {
     font-size: 14px;
@@ -174,7 +177,7 @@ html, body {
     display: inline-block;
   }
   
-  /* Product Color */
+  /* Product color */
   .productColor {
     margin-bottom: 30px;
   }
@@ -196,7 +199,7 @@ html, body {
     cursor: pointer;
     border-radius: 50%;
   }
-  
+  /* Product color buttons */
   .colorChoose input[type="radio"] + label span {
     border: 2px solid #FFFFFF;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.33);
@@ -221,7 +224,7 @@ html, body {
     background-position: center;
   }
   
-  /* Sizing Configuration */
+  /* Sizing configuration */
   .sizeChoose {
     margin-bottom: 20px;
   }
@@ -235,7 +238,7 @@ html, body {
     background-color: #FFFFFF;
     cursor: pointer;
   }
-  
+  /* Button with active state to show selection */
   .sizeChoose button:hover,
   .sizeChoose button:active,
   .sizeChoose button:focus {
@@ -268,6 +271,8 @@ html, body {
     opacity: 0.5;
     margin-right: 5px;
   }
+
+  /* Quantity buttons */
   .productCount {
       display: flex;
       justify-content: left;
@@ -307,7 +312,7 @@ html, body {
     color: #093161;
     margin-right: 20px;
   }
-  
+  /* Add to Cart button */
   .cartBtn {
     display: inline-block;
     background-color: #000000;
