--- a/assignment_5/detailStyle.css
+++ b/assignment_5/detailStyle.css
@@ -1,6 +1,6 @@
 * {
     background-color: #ecf3ff;
-    font-family: "Neue Haas Grotesk Display Pro";
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
   }
 
   a:link {
