--- a/assignment_5/main-style.css
+++ b/assignment_5/main-style.css
@@ -79,7 +79,7 @@
   }
   .headLink {
     color: #4A91E5;
-    font-family: "Neue Haas Grotesk Display Pro";
+    font-family: "Neue Haas Grotesk Display Pro", sans-serif;
     font-weight: 400;
     font-size: 24px;
     text-align: center;
