--- a/assignment_6/detailStyle.css
+++ b/assignment_6/detailStyle.css
@@ -270,15 +270,16 @@ html, body {
   }
   .productCount {
       display: flex;
-      justify-content: left;
+      justify-content: flex-start;
       position: relative;
-      margin: 10px;
+      height: auto;
   }
   .productCount button {
     border: 2px solid #E1E8EE;
     border-radius: 6px;
     padding: 4px 20px;
-    margin: 20px;
+    margin: 32px;
+    width: auto;
     font-size: 32px;
     color: #5E6977;
     background-color: #fff;
@@ -290,9 +291,15 @@ html, body {
     border: 2px solid #86939E;
     outline: none;
   }
-  .productCount h1{
+  .quant{
       outline: none;
-      text-align: match-parent;
+      text-align: center;
+      justify-content: center;
+      text-decoration: none;
+      font-size: 150%;
+      width: 5%;
+      border: none;
+
 
   }
   /* Product Price */
