--- a/assignment_6/detailStyle.css
+++ b/assignment_6/detailStyle.css
@@ -1,6 +1,6 @@
 * {
     background-color: rgba(236,243,255,1);
-    font-family: "Neue Haas Grotesk Display Pro";
+    font-family: "Neue Haas Grotesk Display Pro", sans-serif;
   }
 
   a:link {
@@ -31,6 +31,8 @@ html, body {
     left: 0px;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
     overflow: hidden;
+    display: inline-flex;
+    justify-content: space-between;
     z-index: 1;
   }
   img {
@@ -39,30 +41,40 @@ html, body {
   
   .iconSet {
     overflow: hidden;
+    display: inline-flex;
+    margin: 10px 0;
+    padding: 10px 0;
+    width: 200px;
   }
   .iconSet:hover {
-    color: #F9739C;
-    transition-delay: 100ms;
-    transition-duration: 300ms;
+        color:rgba(249,115,156,1);
+        transition-delay: 100ms;
+        transition-duration: 300ms;
   }
   .iconSet a {
-    float: right;
-    padding: 14px 16px;
-    padding: 0px;
-    margin: 0px;
-    width: 55px;
-    position: absolute;
-    top: 32px;
+    margin: 0 auto;
+    width: 40px;
+    justify-content: center;
+    top: 50%;
+    display: inline-block;
   }
   .searchIcon {
-    right: 72px;
+    display: inline-block;
   }
   .basketIcon {
-    right: 128px;
+    display: inline-block;
+  }
+  #basketTest {
+    width: 20px;
+  }
+  #basketNum {
+    color: #4A91E5;
+    font-weight: 500;
   }
   .profIcon {
-    right: 178px;
+    right: inline-block;
   }
+  
   .title {
     width: 249px;
     color: rgba(8,49,96,1);
@@ -100,7 +112,7 @@ html, body {
     font-weight: normal;
   }
   .headLink {
-    font-family: "Neue Haas Grotesk Display Pro";
+    font-family: "Neue Haas Grotesk Display Pro", sans-serif;
     font-size: 24px;
     text-align: center;
     top: 32px;
@@ -216,7 +228,7 @@ html, body {
   }
   
   .colorChoose input[type="radio"]:checked + label span {
-    background-image: url(images/check-icn.svg);
+    background-image: url(Images/check.png);
     background-repeat: no-repeat;
     background-position: center;
   }
@@ -227,7 +239,6 @@ html, body {
   }
   
   .sizeChoose button {
-    border: 2px solid #E1E8EE;
     border-radius: 6px;
     padding: 13px 20px;
     font-size: 14px;
@@ -236,16 +247,16 @@ html, body {
     cursor: pointer;
   }
   
-  .sizeChoose button:hover,
-  .sizeChoose button:active,
-  .sizeChoose button:focus {
-    border: 2px solid #86939E;
+  .sizeChoose button:hover {
+    border: 3px solid #000000;
     outline: none;
+    transition-duration: 300ms;
   }
-  
-  .sizeConfig {
-    border-bottom: 1px solid #E1E8EE;
-    margin-bottom: 20px;
+
+  .selectedSize {
+    border: 3px solid #000000;
+    outline: black;
+    transition-duration: 300ms;
   }
   
   .sizeConfig a {
@@ -275,7 +286,7 @@ html, body {
       height: auto;
   }
   .productCount button {
-    border: 2px solid #E1E8EE;
+    border: 2px solid #000000;
     border-radius: 6px;
     padding: 4px 20px;
     margin: 32px;
@@ -286,10 +297,11 @@ html, body {
     cursor: pointer;
   }
   .productCount button:hover,
-  .productCount button:active,
-  .productCount button:focus {
-    border: 2px solid #86939E;
+  .productCount button:focus,
+  .productCount button:active  {
+    border: 2px solid #000000;
     outline: none;
+    z-index: 0;
   }
   .quant{
       outline: none;
@@ -297,11 +309,11 @@ html, body {
       justify-content: center;
       text-decoration: none;
       font-size: 150%;
-      width: 5%;
+      width: 10%;
       border: none;
-
-
+      z-index: 1;
   }
+  
   /* Product Price */
   .productPrice {
     display: flex;
@@ -326,4 +338,6 @@ html, body {
   }
   .cartBtn:hover {
     color: #F9739C;
+    transition-delay: 200ms;
+    transition: ease-in-out;
   }
