--- a/assignment_6/detailStyle.css
+++ b/assignment_6/detailStyle.css
@@ -76,7 +76,7 @@ html, body {
   }
   
   .title {
-    width: 249px;
+    width: 20%;
     color: rgba(8,49,96,1);
     position: absolute;
     top: 8px;
