--- a/assignment_6/cartStyle.css
+++ b/assignment_6/cartStyle.css
@@ -130,10 +130,94 @@
   .content {
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    width: auto;
+  }
+
+  .timeline {
+    margin-top: 8%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    width: 45%;
+  }
+
+  .cart-header {
+    margin-top: 8%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: auto;
+    width: 50%;
+  }
+
+  .timelineTop {
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    width: 70%;
+    flex-direction: row;
+    position: relative;
+    margin-top: 15%;
+    color: rgba(8,49,96,1);
+  }
+
+  .timelineBottom {
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-around;
+
+  }
+
+  .filledDot {
+    height: 25px;
+    width: 25px;
+    background-color: rgba(8,49,96,1);
+    border-radius: 50%;
+    display: inline-block;
+  }
+
+  .unfilledDot {
+    height: 22px;
+    width: 22px;
+    border-radius: 50%;
+    display: inline-block;
+    border: 3px solid rgba(8,49,96,1);
+    stroke-width: 5px;
+  }
+
+  .timelineLine {
+    width: 35%;
+    height: 1px;
+    background-color: rgba(8,49,96,1);
+    margin-top: 2%;
+  }
+
+  .timeLabel {
+    font-weight: 500;
+  }
+
+  .cartSub {
+    font-weight: 500;
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-around;
+  }
+
+  .timeLabelCurrent {
+    font-weight: 600;
+    color: #F9739C;
   }
   
+  .solidBreak {
+    background-color: rgba(8,49,96,1);
+    height: 1px;
+    width: 80%;
+  }
+
   .product {
     padding-top: 12%;
     width: auto;
