--- a/assignment_6/cartStyle.css
+++ b/assignment_6/cartStyle.css
@@ -1,6 +1,7 @@
 * {
     background-color: rgba(236,243,255,1);
     font-family: "Neue Haas Grotesk Display Pro";
+    color: rgba(8,49,96,1);
   }
   
    a:link {
