--- a/assignment_6/cartStyle.css
+++ b/assignment_6/cartStyle.css
@@ -59,9 +59,6 @@
     color: #4A91E5;
     font-weight: 500;
   }
-  .profIcon {
-    right: inline-block;
-  }
   
   .quant{
     outline: none;
@@ -147,12 +144,10 @@
   }
 
   .cart-header {
-    margin-top: 8%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    display: inline-flex;
+    justify-content: flex-end;
     margin: auto;
-    width: 50%;
+    width: 80%;
   }
 
   .timelineTop {
@@ -202,7 +197,8 @@
   }
 
   .cartSub {
-    font-weight: 500;
+    font-weight: 400;
+    font-size: 1.5em;
     width: 100%;
     display: inline-flex;
     justify-content: space-around;
@@ -248,10 +244,10 @@
   /* Columns */
 
   .itemCont {
-    display: flex;
+    display: inline-flex;
     margin: auto;
     justify-content: space-around;
-    width: 40%;
+    width: 100%;
     flex-direction: row;
   }
 
@@ -260,7 +256,10 @@
     height: auto;
   }
 
-  #tanImg {
+  #tanImg,
+  #stwImg,
+  #nvyImg,
+  #plmImg {
     width: 140px;
     height: auto;
   }
@@ -271,6 +270,7 @@
     margin: 0%;
     justify-content: center;
     height: 175px;
+    font-weight: 400;
   }
 
   .itemPrice {
@@ -284,12 +284,13 @@
 
   .removal {
     text-decoration: underline;
+    cursor: pointer;
   }
 
-  .removal :hover {
+  .removal:hover {
     text-decoration: underline;
     color: #F9739C;
-    
+    cursor: pointer;
   }
   
   .shopButton {
@@ -307,22 +308,21 @@
     width: 100%;
     padding: 15px;
     text-align: center;
+    cursor: pointer;
   }
   .prodBtn:hover {
     color: #F9739C;
     border: 2px solid #F9739C;
   }
 
-  /* Aligns the Shopping bag header to the left */
-.cart-header {
-	margin-left: 16px;
-	margin-right: 16px;
-}
 
 /* Aligns the list of items in cart to the left */
 .cart-body {
 	margin-left: 16px;
-	margin-right: 16px;
+  margin-right: 16px;
+  display: inline-block;
+  justify-content: space-between;
+  width: 80%;
 }
 
 /* Display shopping cart item in grid layout */
@@ -394,7 +394,7 @@
 
 /* Customizing the cart total labeling */
 .cart-total {
-	width:30%;
+	width: 60%;
 	float: right;
 }
 
@@ -432,4 +432,13 @@
 	font-weight: lighter;
 	border-radius: 4px;
 	height: 40px;
+}
+
+.strawberry,
+.navy,
+.plum,
+.tan {
+  width: auto;
+  display: inline-flex;
+  justify-content: space-between;
 }
