--- a/assignment_6/dogStyle.css
+++ b/assignment_6/dogStyle.css
@@ -1,5 +1,5 @@
 * {
-  background-color: rgba(236,243,255,1);
+  background-color: rgba(236,243,255,1)!;
   font-family: "Neue Haas Grotesk Display Pro";
 }
 
@@ -10,6 +10,7 @@
 /*Nav Bar and Header*/
  /*Nav Bar and Header*/
  .nav {
+   
   width: 100%;
   height: 83px;
   position: fixed;
