--- a/assignment_8/style.css
+++ b/assignment_8/style.css
@@ -23,14 +23,30 @@
        * element that contains the map. */
     #map,
     #elevation_chart {
-        height: 100%;
+        height: 50%;
         width: 400px;
     }
 
     .content {
-        padding: 30px;
+        padding-left: 30px;
+        display: inline-flex;
+        justify-content: space-between;
+        justify-self: center;
     }
-  
+    
+    .spacer {
+        width: 5%;
+    }
+
+    .breaker {
+        height: 8%;
+    }
+
+    .textGutsDes {
+        width: 60%;
+        color: #7C84C9;
+    }
+
   /* Optional: Makes the sample page fill the window. */
     html,
     body {
